# AiDS-Projekt-3

./: .gitignore  CMakeLists.txt  adjacencylist.cpp  adjacencymatrix.cpp  adjacencymatrix.h  benchmark.sh  benchmark_memory.csv  benchmark_time.csv  edgelist.cpp  graph.cpp  graph.h  gui.cpp  gui.h  main.cpp
benchmark/: generate.large  generate.medium  generate.small
benchmark_results/: benchmark_memory.csv  benchmark_time.csv
include/: adjacencylist.h  adjacencymatrix.h  algorithms.h  edgelist.h  graph.h  gui.h
routines/: find.txt  kahn_sort.txt  tarjan_sort.txt
scripts/: benchmark.sh
src/: adjacencylist.cpp  adjacencymatrix.cpp  algorithms.cpp  edgelist.cpp  graph.cpp  gui.cpp  main.cpp
